# svcquery

./: 0Temp.cpp  SvcEntry.cpp  SvcEntry.h  SvcList.cpp  SvcList.h  SvcQuery.cpp  SvcQuery.h  SvcQuery.pro  main.cpp  meson.build
